[gd_scene load_steps=3 format=2]

[ext_resource path="res://Effects/BlockEffects/PhysicsParticleSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Effects/BlockEffects/PhysicsParticle.gd" type="Script" id=2]

[node name="PhysicsParticle" type="RigidBody2D"]
collision_layer = 32
collision_mask = 33
script = ExtResource( 2 )

[node name="Sprite" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="queue_free"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
